finish logic of login and signup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
   progress_state_button: ^1.0.4
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
